# matrix-multiplication

./: CMakeLists.txt  README.md  naive_complex_hermitian.csv  naive_complex_random.csv  naive_complex_symmetric.csv  naive_real_random.csv  naive_real_symmetric.csv  strassen_complex_hermitian_leaf1.csv  strassen_complex_random_leaf1.csv  strassen_complex_symmetric_leaf1.csv  strassen_real_random_leaf1.csv  strassen_real_symmetric_leaf1.csv
include/matmul/: aligned_alloc.hpp  alphaevolve.hpp  arena.hpp  config.hpp  generators.hpp  matrix.hpp  memory_win.hpp  naive.hpp  op_counter.hpp  strassen.hpp  timer.hpp
src/: bench.cpp  main.cpp
